# agentkit

./: .gitignore  README.md  pyproject.toml
doc/: design.md  m1-analysis.md  m2-analysis.md  m3-analysis.md  m4-analysis.md  m5-analysis.md  m6-analysis.md
examples/chatcfd_plugin/: README.md  main.py  test_chatcfd_evals.py  test_plugin.py
examples/chatcfd_plugin/chatcfd_plugin/: __init__.py  artifact_factory.py  eval_setup.py  hooks.py  prompt_builder.py  tools.py
examples/chatcfd_plugin/evals/: README.md  harness.yaml  load_then_calculate.yaml  no_hallucination.yaml
examples/hello_agent/: README.md  main.py
examples/multi_app/: README.md  main.py  test_composition.py
examples/sim_cli_plugin/: README.md  main.py  test_sim_cli_evals.py
examples/sim_cli_plugin/evals/: README.md  recovery.yaml  status_first.yaml
examples/sim_cli_plugin/sim_cli_plugin/: __init__.py  artifact_factory.py  eval_setup.py  hooks.py  prompt_builder.py  tools.py
examples/sim_cli_plugin/web/: index.html
examples/sim_parse_plugin/: README.md  main.py  test_sim_parse_evals.py
examples/sim_parse_plugin/evals/: README.md  detect_first.yaml  forced_parse.yaml
examples/sim_parse_plugin/sim_parse_plugin/: __init__.py  _mock_parsers.py  artifact_factory.py  eval_setup.py  hooks.py  prompt_builder.py  tools.py
examples/sim_parse_plugin/web/: index.html
examples/simgraph_plugin/: README.md  main.py  test_simgraph_evals.py  test_simgraph_plugin.py
src/agentkit/: __init__.py
src/agentkit/eval/: __init__.py  (+8 more)
tests/: test_eval_framework.py  test_eval_m6.py  test_m3.py  test_smoke.py
(+55 files in other folders)
