[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit"
version = "0.0.1"
description = "Lightweight, pluggable agent framework. Skeleton only — business logic lives in host applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "agentkit authors" }]

dependencies = [
    "pydantic>=2.0",
    "litellm>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "mcp>=1.0",
    "python-frontmatter>=1.1",
    "anyio>=4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
